# test_rendy_imgui

./: Cargo.toml  README.md
assets/: gui.vert
src/: gui.rs  main.rs  tex.rs  triangle.rs
